VS: Enable DOTNET_TARGET_FRAMEWORK properties all target types

This makes them compatible with `VS_PACKAGE_REFERENCES` and, in
particular, fixes nuget package references in combination with install
targets.

Fixes: #20764